Fix landing page getting out of bound sometimes

--- a/src/index.scss
+++ b/src/index.scss
@@ -161,6 +161,7 @@ textarea:focus {
 html,
 body {
   overflow-y: auto;
+  overflow-x: hidden;
   background: var(--theme-background), url('./img/backgrounds/dark_bg_texture.webp');
   background-position: center;
   background-size: cover;
