--- a/src/routes/index/Index.module.css
+++ b/src/routes/index/Index.module.css
@@ -127,7 +127,6 @@
     padding: 0 1em;
     max-width: 100%;
     overflow-x: hidden;
-    width: 100vw;
   }
 
   .newsContainer {
